Chapter 7 CI initial set up

--- a/7. Continuous Integration and Deployment with AWS/frontend/Dockerfile.dev
+++ b/7. Continuous Integration and Deployment with AWS/frontend/Dockerfile.dev
@@ -2,9 +2,10 @@ FROM node:16-alpine
 
 WORKDIR "/app"
 
-COPY package.json .
+COPY ["7. Continuous Integration and Deployment with AWS/frontend/package.json", "."]
+
 RUN npm install
 
-COPY . .
+ADD ["7. Continuous Integration and Deployment with AWS/frontend", "./"]
 
 CMD ["npm", "run", "start"]
