--- a/7. Continuous Integration and Deployment with AWS/frontend/Dockerfile
+++ b/7. Continuous Integration and Deployment with AWS/frontend/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:16-alpine as builder
 WORKDIR "/app"
-COPY package.json .
+COPY ["7. Continuous Integration and Deployment with AWS/frontend/package.json", "."]
 RUN npm install
-COPY . .
+ADD ["7. Continuous Integration and Deployment with AWS/frontend", "./"]
 RUN npm run build
 
 FROM nginx
+EXPOSE 80
 COPY --from=builder /app/build /usr/share/nginx/html
