--- a/9. "Dockerizing" Multiple Services/nginx/default.conf
+++ b/9. "Dockerizing" Multiple Services/nginx/default.conf
@@ -13,8 +13,8 @@ server {
         proxy_pass http://client;
     }
 
-    location /sockjs-node {
-        proxy_pass https://client;
+    location /ws {
+        proxy_pass http://client;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
@@ -22,6 +22,6 @@ server {
 
     location /api {
         rewrite /api/(.*) /$1 break;
-        proxy_pass https://api;
+        proxy_pass http://api;
     }
 }
